--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 
     <script id="inits">
       var config = {
-        apiKey: "AIzaSyBK-q1YVmOhc8YeifwONPX-DoZMEVSEwNw",
-        authDomain: "btest-46bbb.firebaseapp.com",
-        databaseURL: "https://btest-46bbb.firebaseio.com",
-        projectId: "btest-46bbb",
-        storageBucket: "btest-46bbb.appspot.com",
-        messagingSenderId: "771803657075",
-        appId: "1:771803657075:web:268af591ff4a9ee8c3cb06",
+        apiKey: "AIzaSyD-Jzyaw1q5z_UQdTHWGVf90lF0A29pZs8",
+        authDomain: "benwinding-github.firebaseapp.com",
+        projectId: "benwinding-github",
+        databaseURL: "https://benwinding-github-default-rtdb.firebaseio.com",
+        storageBucket: "benwinding-github.appspot.com",
+        messagingSenderId: "665752279816",
+        appId: "1:665752279816:web:d2e183483546598f34eabd"
       };
       firebase.initializeApp(config);
 
